# ndpm

./: Cargo.toml  README.md
src/: args.rs  error.rs  lib.rs  main.rs  xbps.rs
