[package]
name = "ndpm"
version = "0.1.1"
edition = "2024"
authors = ["Naz <ndpm13@ch-naseem.com>"]
description = "A user-friendly package manager wrapper for XBPS with AppImage support"
repository = "https://git.ch-naseem.com/noid/ndpm"
license = "MIT"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["from"] }
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
zap-rs = "0.2.0"
